--- a/account-services/src/main/resources/application.properties
+++ b/account-services/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.application.name=account-services
 
 server.port=9081
 
+#open feign
+spring.cloud.openfeign.client.config.default.connect-timeout=5000
+spring.cloud.openfeign.client.config.default.read-timeout=5000
+spring.cloud.openfeign.circuitbreaker.enabled=true
+resilience4j.timelimiter.configs.default.timeout-duration=5s
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud?createdDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USER:}
 spring.datasource.password=${MYSQL_PASSWORD:}
