--- a/notification-services/src/main/resources/application.properties
+++ b/notification-services/src/main/resources/application.properties
@@ -1,19 +1,7 @@
 spring.application.name=notification-services
 
-server.port=9083
-server.servlet.context-path=/
+spring.config.import=configserver:http://localhost:8888
+#this file is the entrypoint for spring to know where to look for the configuration file and hold the initial
 
-spring.mail.default-encoding=UTF-8
-spring.mail.host=${MAIL_HOST:}
-spring.mail.username=${MAIL_USERNAME:}
-#create your app passwords with other (custom name)
-#https://myaccount.google.com/apppasswords
-spring.mail.password=${MAIL_PASSWORD:}
-spring.mail.port=587
-spring.mail.protocol=${MAIL_PROTOCOL:}
-spring.mail.test-connection=false
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-# swagger-ui custom path
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.cloud.config.fail-fast=true
+#the service will not run if it can't reach the config-service
