--- a/account-services/build.gradle
+++ b/account-services/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 ext {
     springCloudVersion = "2025.0.0"
+    springCloudServicesVersion = "4.3.0"
 }
 
 group = 'com.example'
@@ -34,6 +35,9 @@ dependencies {
     implementation("org.modelmapper:modelmapper:2.4.2")
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+    implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -44,6 +48,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:$springCloudServicesVersion"
     }
 }
 
