--- a/account-services/src/main/resources/application.properties
+++ b/account-services/src/main/resources/application.properties
@@ -1,28 +1,7 @@
 spring.application.name=account-services
 
-server.port=9081
+spring.config.import=configserver:http://localhost:8888
+#this file is the entrypoint for spring to know where to look for the configuration file and hold the initial
 
-#open feign
-spring.cloud.openfeign.client.config.default.connect-timeout=5000
-spring.cloud.openfeign.client.config.default.read-timeout=5000
-spring.cloud.openfeign.circuitbreaker.enabled=true
-resilience4j.timelimiter.configs.default.timeout-duration=5s
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud?createdDatabaseIfNotExist=true
-spring.datasource.username=${MYSQL_USER:}
-spring.datasource.password=${MYSQL_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#JPA-Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = true
-spring.jpa.properties.hibernate.show.sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# swagger-ui custom path
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.cloud.config.fail-fast=true
+#the service will not run if it can't reach the config-service
