--- a/config-services/.env
+++ b/config-services/.env
@@ -1,3 +1,6 @@
+MYSQL_USER=root
+MYSQL_PASSWORD=123456
+
 MAIL_HOST=smtp.gmail.com
 MAIL_USERNAME=buiduykhanh0162003@gmail.com
 MAIL_PASSWORD=wjpw yjbi qcdm alli
