--- a/config-services/build.gradle
+++ b/config-services/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-description = 'notification-services'
+description = 'config-services'
 
 java {
     toolchain {
@@ -25,20 +25,16 @@ repositories {
 }
 
 ext {
-    set('springAiVersion', "1.0.3")
-    springCloudVersion = "2025.0.0"
-    springCloudServicesVersion = "4.3.0"
+    set('springCloudVersion', "2025.0.0")
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
     implementation("org.modelmapper:modelmapper:2.4.2")
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
-    implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-config-server'
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -48,9 +44,7 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
-        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:$springCloudServicesVersion"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
