--- a/statistic-services/build.gradle
+++ b/statistic-services/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'org.springframework.boot' version '3.5.6'
     id 'io.spring.dependency-management' version '1.1.7'
 }
+ext {
+    springCloudVersion = "2025.0.0"
+    springCloudServicesVersion = "4.3.0"
+}
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -30,12 +34,20 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
     implementation("org.modelmapper:modelmapper:2.4.2")
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+    implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:$springCloudServicesVersion"
+    }
 }
 
 tasks.named('test') {
