--- a/statistic-services/src/main/resources/application.properties
+++ b/statistic-services/src/main/resources/application.properties
@@ -1,22 +1,7 @@
 spring.application.name=statistic-services
 
-server.port=9082
+spring.config.import=configserver:http://localhost:8888
+#this file is the entrypoint for spring to know where to look for the configuration file and hold the initial
 
-spring.datasource.url=jdbc:mysql://localhost:3306/springcloudreport?createDatabaseIfNotExist=true
-spring.datasource.username=${MYSQL_USER:}
-spring.datasource.password=${MYSQL_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#JPA-Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = true
-spring.jpa.properties.hibernate.show.sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-springdoc.swagger-ui.path=/swagger-ui.html
-
-logging.level.* = debug
+spring.cloud.config.fail-fast=true
+#the service will not run if it can't reach the config-service
