remove env and properties from tracking

--- a/config-services/src/main/resources/application.properties
+++ b/config-services/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/shared
 #tells spring where to locate the config files
 
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=${CONFIG_IMPORT:}
