--- a/account-services/build.gradle
+++ b/account-services/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
     implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
