--- a/config-services/src/main/resources/shared/application.properties
+++ b/config-services/src/main/resources/shared/application.properties
@@ -3,7 +3,7 @@ logging.level.* = debug
 springdoc.swagger-ui.path=/swagger-ui.html
 
 #this configuration file will hold common configs to be shared among all files
-eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL:}
+eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
 #where our registry server is located
 eureka.instance.prefer-ip-address=true
 #when the application registers with eureka, true: it uses its IP address rather than its hostname
