--- a/statistic-services/build.gradle
+++ b/statistic-services/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
