--- a/auth-services/build.gradle
+++ b/auth-services/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     // JWT
     implementation "io.jsonwebtoken:jjwt-api:0.12.5"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"
 
@@ -49,6 +50,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
