--- a/config-services/src/main/resources/shared/application.properties
+++ b/config-services/src/main/resources/shared/application.properties
@@ -13,8 +13,10 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #zipkin
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+#management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.enabled=false
+management.zipkin.tracing.enabled=false
 
 #log
 logging.file.name=myapp.log
